# Chip8Emulator

./: .gitignore  Cargo.toml  LICENSE  README.md
programs/: testfile.txt
src/: hardware.rs  instruction.rs  interpreter.rs  main.rs  program_handler.rs  program_loader.rs
src/drivers/: input.rs  screen.rs
src/hardware/: chip8.rs  instruction.rs  mod.rs
src/interface/: display.rs  input.rs
src/traits/: chip_8_interpreter.rs  instructions.rs
