[package]
name = "chip8emulator"
version = "0.1.0"
authors = ["bgreni <grenierb96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.112.0"
piston = "0.52.0"
rand = "0.7.3"
bit-vec = "0.6.2"
