[package]
name = "chip8emulator"
version = "0.1.0"
authors = ["bgreni <grenierb96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "*"
piston2d-opengl_graphics = "*"
piston2d-graphics = "*"
pistoncore-sdl2_window = "*"
piston_window = "*"
rand = "*"
core-graphics = "*"