[package]
name = "chip8-rs"
version = "0.1.1"
authors = ["bgreni <grenierb96@gmail.com>"]
description = "chip8 emulator"
edition = "2018"
license = "MIT"
repository = "https://github.com/bgreni/Chip8Emulator"
readme = "README.md"
keywords = ["emulators"]
categories = ["emulators"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34.5"
bit-vec = "0.6.3"
clap = "2.33.3"
rand = "0.8.3"